--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #fff;
+  --background-color: #ffffffe1;
   --btn-color: #0987f2;
   --btn-text-color: #fff;
   --project-card-bg: #ffffff00;
@@ -80,7 +80,7 @@ p {
 
   h2,
   h3 {
-    font-size: 240px;
+    font-size: 24px;
   }
 
   p {
