--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   --btn-color: #fff;
   --btn-text-color: #222;
   --project-card-bg: #fff;
+  --certificate-card-bg: #fff;
   --text-color: #fff;
   --form-text-color: #fff;
   --footer-text-color: #bbb;
